# skill-deps-doctor

./: .gitignore  .pre-commit-hooks.yaml  README.md  README.zh-CN.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
clawhub-skill/openclaw-skill-deps/: SKILL.md
clawhub-skill/openclaw-skill-deps/scripts/: openclaw-skill-deps.py
clawhub-skill/skill-deps-doctor/scripts/: skill-deps-doctor.py
openclaw_skill_deps/: __init__.py  checkers.py  cli.py  fix_gen.py  hints.py  migration.py  models.py  parsers.py  plugins.py  profiles.py  scanners.py  schemas.py  snapshot.py  versions.py
openclaw_skill_deps/data/: hints.yaml
scripts/: migrate_hints_schema.py  release-precheck.ps1  release-precheck.sh
skill_deps_doctor/: __init__.py  fix_gen.py  graph.py  models.py  parsers.py  plugins.py  snapshot.py
skill_deps_doctor/data/: hints.yaml
tests/: test_api.py  test_checkers.py  test_cli.py  test_fix_gen.py  test_graph.py  test_hints.py  test_migration.py  test_models.py  test_parsers.py  test_plugins.py  test_profiles.py  test_scanners.py  test_schemas.py  test_snapshot.py  test_versions.py
