[project]
name = "openclaw-skill-deps"
version = "0.1.0"
description = "Skill-level dependency doctor for OpenClaw"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="openclaw"}]
keywords = ["openclaw", "dependency", "doctor", "skill", "preflight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/RangeKing/openclaw-skill-deps"
Repository = "https://github.com/RangeKing/openclaw-skill-deps"
Issues = "https://github.com/RangeKing/openclaw-skill-deps/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "openclaw-skill-deps[test]",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
openclaw-skill-deps = "openclaw_skill_deps.cli:main"
skill-deps-doctor = "openclaw_skill_deps.cli:main"
skill-deps = "openclaw_skill_deps.cli:main"

[project.entry-points."openclaw_skill_deps.checkers"]
# Third-party plugins register here. Example:
# my_gpu_checker = "my_plugin:check_gpu"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
openclaw_skill_deps = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
