[project]
name = "skill-deps-doctor"
version = "0.1.0"
description = "Skill-level dependency doctor for OpenClaw"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="openclaw"}]
keywords = ["openclaw", "dependency", "doctor", "skill", "preflight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/RangeKing/skill-deps-doctor"
Repository = "https://github.com/RangeKing/skill-deps-doctor"
Issues = "https://github.com/RangeKing/skill-deps-doctor/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "skill-deps-doctor[test]",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
skill-deps-doctor = "skill_deps_doctor.cli:main"
skill-deps = "skill_deps_doctor.cli:main"

[project.entry-points."skill_deps_doctor.checkers"]
# Third-party plugins register here. Example:
# my_gpu_checker = "my_plugin:check_gpu"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
skill_deps_doctor = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
